--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ font-size: 38px;
 					<div class="video-parallax">
 	            <div class="overlay"></div>
 	            <div class="col-md-12 playvid">
-	            	<a href="https://www.baidu.com/" target="view_window">全息3D相册技术，点击就送</a>
+	            	<a href="https://u9daye.github.io/KissVV/" target="view_window">全息3D相册技术，点击就送</a>
 	            </div>
 	        </div>
 		
